# emergency-triage-backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  build.sh  test_api.sh
.github/workflows/: ci.yml
docs/: architecture.md  data_models.md  ideas.md
src/: main.cpp
src/api/: handlers.cpp  handlers.hpp
src/core/: triage.cpp  triage.hpp
src/storage/: storage.cpp  storage.hpp
src/utils/: errors.hpp  json_utils.cpp  json_utils.hpp
tests/: CMakeLists.txt  test_storage.cpp  test_triage.cpp
